# lua_piloted_app

./: .gitignore  CMakeLists.txt  README.md  main.cpp  submodules.init.txt
cmake/: 3rdparty.cmake  sol2.cmake
doc/: pilot_module.lua  project.lua  project_test.lua  seq_project_builder.puml
src/: App.cpp  App.h
src/Contrib/ImWidgets/: ImWidgets.cpp  ImWidgets.h
src/Core/: DataConnector.cpp  DataConnector.h  DataProvider.cpp  DataProvider.h  FileDataProvider.h  FileDataSource.h  Graph.cpp  Graph.h  LuaVM.cpp  LuaVM.h  LuaVastModule.cpp  LuaVastModule.h  NodeFactory.h  ProjectBuilder.h
src/Gui/: MainFrame.cpp  MainFrame.h
src/Headers/: Globals.h
src/Lua/: LuaEngine.cpp  LuaEngine.h
src/Panes/: DataPane.cpp  DataPane.h  ToolPane.cpp  ToolPane.h
src/Panes/Manager/: LayoutManager.cpp  LayoutManager.h
src/abstract/: DataProvider.h  LuaNode.h  NumericDataConsumer.h  NumericDataProvider.h
src/interfaces/: iDataConsumer.h  iVisitor.h
src/nodes/DataConverters/: DataConvertTest.cpp  DataConvertTest.h
src/nodes/DataProviders/: FileDataProvider.cpp  FileDataProvider.h
